# hello-emscripten

./: .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  README.md  hello.Dockerfile
.github/workflows/: build-em.yml  build-gl.yml  build-vk.yml  build.yml  cmake.yml  pages.yml
notes/: Data Flow.md  Serialization Examples.md
source/: CMakeLists.txt  egl.c  hello.cpp  hello.h  main-em.cpp  main-ems.cpp  main-gl-glfw.cpp  main-glfw.cpp  main-glfw.h  main-vk-glfw.cpp  main.cpp  server-main.cpp  test-main.cpp  utility.cmake
source/audio/: audio.cpp  audio.h
source/html/: index.html  signup.html  users.post.schema.json
source/network/: message.h  network_client.cpp  network_client.h  network_message.cpp  network_message.h  utility.cpp  utility.h  websocket-boost.cpp  websocket-boost.h  websocket-em.cpp  websocket-em.h  websocket.cpp  websocket.h
source/server/: login.cpp  login.h
source/simulation/: main.cpp
source/state/: client.cpp  client.h  file_cache.cpp  file_cache.h  input.h  instance.h  model-em.cpp  model-native.cpp  model.cpp  model.h  server.h
source/test/: fuzzer-main.cpp  testing.cpp  testing.h
source/test_files/: AvatarSample_B.vrm  NOTICES.md  white_modern_living_room.glb
source/utility/: file.cpp  file.h  math.h  openal_resource.cpp  openal_resource.h  opus_resource.cpp  opus_resource.h  out_ptr.h  resource.h  serialization.h  trace.cpp  trace.h  unique_span.h  vulkan_memory_allocator_resource.cpp  vulkan_memory_allocator_resource.h  vulkan_resource.cpp  vulkan_resource.h  xr_resource.cpp  xr_resource.h
source/utility/window/: window-em.cpp  window-vk-glfw.cpp  window.h
source/visuals/: indirect_draw-gl.cpp  indirect_draw-vk.cpp  indirect_draw.h  reality.cpp  reality.h  view.cpp  view.h  visuals.cpp  visuals.h
source/visuals/shaders/: solid_fragment.glsl  solid_vertex.glsl
source/window/: window-ems.cpp  window-win32.cpp  window.h
